syntax = "proto3";

package token;

option go_package = "core/grpc/token;token";

service TokenService {
  rpc GetAccessToken (TokenRequest) returns (TokenReply);
}

message TokenRequest {}

message TokenReply {
  string access_token = 1;
  int64 expire_at = 2; // 过期时间戳（秒）
}
